test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/abi_name_attr.sw
library;

#[abi_name(name = true)]
pub fn not_ok() {}
